--- a/style.css
+++ b/style.css
@@ -12,6 +12,48 @@ body {
 #timer {
     font-size: 7rem;
     font-weight: 700;
-    color: palevioletred;
-    text-shadow: 2px 2px 2px;
+    color: #f92672;
+    text-shadow: 2px 2px #f8a5c2;
+    width: 600px;
+    text-align: center;
+    margin: 40px auto;
+}
+
+#buttons {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    background-color: #f92672;
+    color: #f0f0f0;
+    border: none;
+    font-size: 2rem;
+    padding: 1.5rem 4rem;
+    margin: 1rem;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: 7px 5px 10px rgba(0, 0, 0, .3);
+    transition: all .3s;
+}
+
+button:hover {
+    background-color: #f44583;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+button[disabled] {
+    opacity: .5;
+    cursor: default;
+}
+
+@media (max-width: 800px){
+    #timer {
+    font-size: 4rem;
+    width: 350px;
+}
+button {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+}
 }
